--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "statebook",
-    "version": "1.0.7",
+    "version": "1.0.8",
     "description": "Fast, Reliable, Light and Incredibely Easy State Manager Built with Rxjs",
     "keywords": [
         "state manager",
@@ -26,7 +26,7 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "@types/react": "^18.0.9",
+        "@types/react": "^17.0.39",
         "@typescript-eslint/eslint-plugin": "^5.25.0",
         "@typescript-eslint/parser": "^5.25.0",
         "eslint": "^8.15.0",
@@ -37,8 +37,8 @@
         "ts-node": "^10.7.0",
         "typescript": "^4.6.4"
     },
-    "dependencies": {
-        "react": "^18.1.0",
+    "peerDependencies": {
+        "react": "^16.8.0",
         "rxjs": "^7.5.5"
     }
 }
