--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
     "name": "statebook",
-    "version": "1.0.17",
-    "description": "Fast, Reliable, Light and Incredibely Easy State Manager Built with Rxjs",
+    "version": "1.0.18",
+    "description": "Fast, Reliable, Light and Incredibely Easy State Manager",
     "keywords": [
         "state manager",
         "state",
-        "react",
-        "rxjs",
         "reactive"
     ],
     "main": "dist/bundle/statebook.min.js",
@@ -26,7 +24,6 @@
     "license": "MIT",
     "devDependencies": {
         "@types/node": ">=18.0.0",
-        "@types/react": ">=18.0.9",
         "@typescript-eslint/eslint-plugin": "^5.25.0",
         "@typescript-eslint/parser": "^5.25.0",
         "eslint": "^8.15.0",
@@ -41,11 +38,5 @@
         "typescript": "^4.6.4",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.10.0"
-    },
-    "peerDependencies": {
-        "react": ">=17.0.2"
-    },
-    "dependencies": {
-        "rxjs": "^7.5.6"
     }
 }
