--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "license": "MIT",
     "devDependencies": {
         "@types/node": ">=18.0.0",
+        "@types/react": "^18.0.15",
         "@typescript-eslint/eslint-plugin": "^5.25.0",
         "@typescript-eslint/parser": "^5.25.0",
         "eslint": "^8.15.0",
@@ -39,5 +40,8 @@
         "typescript": "^4.6.4",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.10.0"
+    },
+    "peerDependencies": {
+        "react": ">=17.0.2"
     }
 }
