--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "statebook",
-    "version": "1.0.18",
+    "version": "1.0.17",
     "description": "Fast, Reliable, Light and Incredibely Easy State Manager",
     "keywords": [
         "state manager",
@@ -24,8 +24,10 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@types/lodash": "^4.14.182",
         "@types/node": ">=18.0.0",
         "@types/react": "^18.0.15",
+        "react": "^18.2.0",
         "@typescript-eslint/eslint-plugin": "^5.25.0",
         "@typescript-eslint/parser": "^5.25.0",
         "eslint": "^8.15.0",
@@ -40,6 +42,9 @@
         "typescript": "^4.6.4",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.10.0"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21"
     },
     "peerDependencies": {
         "react": ">=17.0.2"
