--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
     "name": "statebook",
-    "version": "1.0.16",
-    "description": "Fast, Reliable, Light and Incredibely Easy State Manager Built with Rxjs",
+    "version": "1.0.17",
+    "description": "Fast, Reliable, Light and Incredibely Easy State Manager. Stateful Data Structures for React",
     "keywords": [
         "state manager",
         "state",
-        "react",
-        "rxjs",
-        "reactive"
+        "reactive",
+        "stateful data types",
+        "statebook",
+        "data structure",
+        "topics",
+        "pub/sub",
+        "publish",
+        "subscribe",
+        "observable",
+        "observer"
     ],
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "files": [
-        "dist/*.{js,ts}",
-        "dist/**/*.{js,ts}",
-        "readme.md"
-    ],
+    "main": "dist/bundle/statebook.min.js",
+    "module": "dist/esm/index.js",
+    "types": "dist/types/index.d.ts",
     "author": {
         "name": "Abdel Rahman Hussein",
         "email": "abdelrahman146@outlook.com"
@@ -24,21 +27,35 @@
         "type": "git",
         "url": "https://github.com/abdelrahman146/statebook.git"
     },
+    "scripts": {
+        "try": "node --experimental-specifier-resolution=node --loader ts-node/esm src/test.ts",
+        "build": "shx rm -rf dist && tsc && webpack"
+    },
     "license": "MIT",
     "devDependencies": {
-        "@types/react": "^18.0.9",
+        "@types/lodash": "^4.14.182",
+        "@types/node": ">=18.0.0",
+        "@types/react": "^18.0.15",
+        "react": "^18.2.0",
         "@typescript-eslint/eslint-plugin": "^5.25.0",
         "@typescript-eslint/parser": "^5.25.0",
         "eslint": "^8.15.0",
         "eslint-plugin-react": "^7.30.0",
         "eslint-plugin-react-hooks": "^4.5.0",
         "eslint-plugin-unicorn": "^42.0.0",
-        "ts-loader": "^9.3.0",
+        "prettier": "^2.7.1",
+        "shx": "^0.3.4",
+        "terser-webpack-plugin": "^5.3.3",
+        "ts-loader": "^9.3.1",
         "ts-node": "^10.7.0",
-        "typescript": "^4.6.4"
+        "typescript": "^4.6.4",
+        "webpack": "^5.73.0",
+        "webpack-cli": "^4.10.0"
     },
     "dependencies": {
-        "react": "^17.0.2",
-        "rxjs": "^7.5.5"
+        "lodash": "^4.17.21"
+    },
+    "peerDependencies": {
+        "react": ">=17.0.2"
     }
 }
